update UI to display round results and track score

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./rps.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
-    
+    <div id="rpsChoices">
+        <img id="rock" src="img/rock.jpg">
+        <img id="paper" src="img/paper.jpg">
+        <img id="scissors" src="img/scissors.jpg">
+    </div>
+    <h1>Scoreboard</h1>
+    <div id="scoreboard">
+        <div>Player Score: <span id="playerscore">0</span></div>
+        <div>Computer Score: <span id="computerscore">0</span></div>
+    </div>
+    <div id="results">
+
+    </div>
+
+<script src="./rps.js"></script>    
 </body>
 </html>
