--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
+    <h1 id="title">ROCK PAPER SCISSORS</h1>
     <div id="rpsChoices">
         <img id="rock" src="img/rock.jpg">
         <img id="paper" src="img/paper.jpg">
